# aubo_robot

my_grab/: CMakeLists.txt  package.xml
my_grab/launch/: grab_demo.launch
my_grab/src/: MoveGroupInterface_To_Kinetic.cpp  grab.cpp
